# companies

./: .env_example  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
companies/: cli.py  settings.py
companies/entities/: base.py  enums.py
companies/entities/api/: auth.py
companies/helpers/: datetime.py  email.py  orjson.py  templates.py
companies/repositories/: employees.py  pg_models.py  tokens.py
companies/services/auth/: jwt.py  password.py  register.py
companies/web/: dependencies.py  protected_routes.py  router.py
tests/: conftest.py
